instruct user to push to the 'cdk/' path in their custom registry

--- a/templates/README.j2
+++ b/templates/README.j2
@@ -14,7 +14,7 @@ edit ./bundle.yaml
       gui-y: '800'
     charm: ./charms/containerd
     options:
-      custom_registries: '[{"host": "docker.io", "url": "http://my.custom.registry:5000"}]'   # point to your docker registry
+      custom_registries: '[{"host": "rocks.canonical.com:443", "url": "http://my.custom.registry:5000"}]'   # point to your docker registry
 ```
 
 # and snap-store-proxy (if using on-prem snaps)
