--- a/templates/README.j2
+++ b/templates/README.j2
@@ -1,9 +1,42 @@
-# on the machine set as the snap-store-proxy
-./push_snaps.sh
+# Snap Store Proxy
+todo if using air-gapped snap-store-proxy
 
-# in the context of the container registry
-# define DOCKER_REGISTRY environment variable (ie. localhost:5000)
+## on the machine set as the snap-store-proxy ()
+`./push_snaps.sh`
+
+## set the juju model *snap-store-proxy*
+```
+cat << EOF >> snap-store-model-config.yaml
+snap-store-assertions: |-
+  type: store
+  ...
+snap-store-proxy: <store-id>
+EOF
+juju model-config snap-store-model-config.yaml
+```
+
+# Private Container Registry
+todo if using on-prem container registry
+
+## push necessary containers to the registry
+define DOCKER_REGISTRY environment variable
+```
+export DOCKER_REGISTRY=my.custom.registry:5000
 ./push_container_images.sh
+```
 
-# once the juju model is set to point to the container and snap-store-proxy
+## update the provided bundle to use the container registry
+edit ./bundle.yaml
+```
+  containerd:
+    options:                     # add this to add your offsite docker registry
+      custom_registries: '[{"host": "my.custom.registry:5000", "url": "http://my.custom.registry:5000"}]'
+  kubernetes-master:
+    options:                     # add this to add indicate that CDK images are found in the custom registry
+      image-registry: my.custom.registry:5000/cdk
+```
+
+# Juju Deployment
+```
 juju deploy {{deploy_args}}
+```
